# goit-pythonweb-hw-04

./: README.md  pyproject.toml
assets/test_files/source/: Dockerfile  README.md  compose.yaml  pyproject.toml
assets/test_files/source/additional_files/: Screencast from 2025-07-10 00-01-50.webm  http_server.odt  http_server.txt  settings.tar.xz
assets/test_files/source/assets/results/examples/: data.json
assets/test_files/source/src/: main.py
assets/test_files/source/src/decorators/: handle_server_errors.py
assets/test_files/source/src/storage/: storage.py
assets/test_files/source/src/utils/: constants.py  validations.py
assets/test_files/source/src/web/static/pages/: index.html  message.html
assets/test_files/source/src/web/static/scripts/: convert-timestamps.js
assets/test_files/source/src/web/templates/: error.html  read.html
src/cli/: args_parser.py  commands.py
src/utils/: logger_config.py
